--- a/.env
+++ b/.env
@@ -1,94 +1,45 @@
-# ============ RPC / KEYS ============
-# URL RPC ноды Solana (Helius, QuickNode и т.п.)
-RPC_URL=https://mainnet.helius-rpc.com/?api-key=a21bfaac-59f6-4757-aaa7-6044ee99b2be
+# RPC нужен ТОЛЬКО для чтения (quotes, balances, confirmation)
+RPC_URL=https://mainnet.helius-rpc.com/?api-key=
 
-# Приватный ключ бота в base58 (обязательно БЕЗ кавычек)
+# КЛЮЧ БОТА
 PRIVATE_KEY_BASE58=
 
-# API ключ pumpportal (из кабинета pump.fun)
+# pumpportal
 PUMP_API_KEY=
 
-# ============ WATCH WALLET ============
-# Кошельки, за которыми следим (через запятую, БЕЗ пробелов)
+# кого копируем
 WATCH_WALLET=
-MIN_WALLET_BUY_SOL=0.003   # например
-BACKFILL_DAYS=2            # опционально
-BACKFILL_PER_TX_SLEEP=0.2  # опционально
 
-# Минимальная покупка кошельком, чтобы бот добавил токен в watch-лист (в WSOL)
-MIN_WALLET_BUY_SOL=0.003
-
-# Порог объёма SOL-продажи по токену, который мы считаем "заметным" (в SOL).
-# В ТЕКУЩЕЙ ЛОГИКЕ вход завязан на падение ЦЕНЫ, а не на размер продажи,
-# но поле остаётся на будущее/для логов.
-TRIGGER_SELL_SOL=0.1
-
-# ============ ВХОД В СДЕЛКУ ============
-# Сколько SOL покупаем при срабатывании сигнала
+# вход
 BUY_SOL=0.001
-
-# Slippage в basis points (100 bps = 1%)
 SLIPPAGE_BPS=1500
+PRIORITY_FEE_LAMPORTS=500000
+SELL_PRIORITY_FEE_LAMPORTS=250000
 
-# Приоритетная комиссия в лямпортах
-PRIORITY_FEE_LAMPORTS=10000   # 0.001 SOL для ПОКУПКИ
-SELL_PRIORITY_FEE_LAMPORTS=5000   # 0.0005 SOL для ПРОДАЖИ
+# фильтры
+MIN_LIQ_USD=30000
+MIN_SELL_SHARE_PCT=5
+SOL_PRICE_USD=124
 
-# ============ АВТОПРОДАЖА ============
+# ====== SHREDSTREAM / JITO ======
+USE_JITO_SEND=true
+JITO_UUID=
+JITO_ENGINE_URL=https://mainnet.block-engine.jito.wtf
+
+# сколько чаевых (tip) в лампортах
+JITO_TIP_LAMPORTS=0
+
+# можно НЕ указывать — тогда код сам возьмёт tip-аккаунты через getTipAccounts()
+# JITO_TIP_ACCOUNTS=xxxx,yyyy,zzzz
+
+LIQ_TTL_SEC=180
+LIQ_REFRESH_SEC=120
+LIQ_REFRESH_CONCURRENCY=1
+
 AUTO_SELL=true
-AUTO_TP_PCT=5.0
-AUTO_SL_PCT=25.0
-AUTO_SELL_POLL_INTERVAL=1.0
+AUTO_TP_PCT=5
+AUTO_SL_PCT=25
+AUTO_SELL_POLL_INTERVAL=1
 
-# ============ ФИЛЬТРАЦИЯ ПО PUMP.FUN ============
-# Требовать маршрут через Pump.fun
-REQUIRE_PUMPFUN=true
-
-# Если хочешь фиксированный пул (ammKey) – впиши сюда, иначе оставь пустым
-POOL_AMM_ID=
-
-# ============ JUPITER ============
-# Базовый URL для Jupiter (можно оставить как есть)
-JUP_BASE=https://lite-api.jup.ag
-
-# Использовать только JUP_BASE (true) или несколько баз сразу (false)
-JUP_BASES_ONLY=true
-
-# ============ RPC ОПЦИИ ============
-# Пропускать preflight (true/false)
-SKIP_PREFLIGHT=false
-
-# Быстрое подтверждение (processed) вместо confirmed/finalized
-FAST_CONFIRM=true
-
-# ============ ФИЛЬТРЫ ПРОДАЖ / ЦЕНЫ / ЛИКВИДНОСТИ ============
-
-# 👉 В текущем коде НЕ используется в логике входа, можешь оставить как справочную настройку
-BIG_SELL_SOL_MIN=1.0
-
-# Диапазон падения ЦЕНЫ в % (по данным Jupiter), вызванный ОДНОЙ продажей,
-# при котором бот заходит в токен.
-ONE_SELL_DROP_MIN_PCT=5.0
-ONE_SELL_DROP_MAX_PCT=70.0
-
-# Минимальная ликвидность в $ для токена, чтобы вообще его рассматривать
-MIN_LIQ_USD=40000.0
-
-# Минимальная доля SOL-части пула (в %), которую должна составлять ОДНА продажа,
-# чтобы бот считал её "достаточно крупной".
-# 7–10% — более-менее адекватно. Можешь поэкспериментировать.
-MIN_SELL_SHARE_PCT=3.0
-
-# Грубая оценка цены SOL в USD (нужна, чтобы по ликвидности прикинуть,
-# сколько SOL лежит в пуле). Не критично, но лучше не ставить фигню.
-SOL_PRICE_USD=134.0
-
-BACKFILL_MIN_LIQ_USD=40000
-
-DEBUG_JUP_ROUTES=false
-
-JUP_DEBUG_ROUTES=true
-
-AUTOSELL_LOG_EVERY=20
-AUTOSELL_LOG_DELTA=0.02
-
+DEBUG_ROUTES=false
+AUTOSELL_LOG_EVERY_SEC=10
